force-app/main/default/objects/Change_Service_Appointment__e/Change_Service_Appointment__e.object-meta.xml
<CustomObject>
    <label>Change Service Appointment</label>
    <pluralLabel>Change Service Appointments</pluralLabel>
</CustomObject>