force-app/main/default/objects/Change_Service_Appointment__e/fields/Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Id__c</fullName>
    <label>Appointment Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>