force-app/main/default/objects/Change_Service_Appointment__e/fields/Changed_by_Id__c.field-meta.xml
<CustomField>
    <fullName>Changed_by_Id__c</fullName>
    <label>Changed by Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>