force-app/main/default/objects/Change_Service_Appointment__e/fields/Changed_on__c.field-meta.xml
<CustomField>
    <fullName>Changed_on__c</fullName>
    <label>Changed on</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>