force-app/main/default/objects/Change_Service_Appointment__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>