force-app/main/default/objects/Change_Service_Appointment__e/fields/Old_status__c.field-meta.xml
<CustomField>
    <fullName>Old_status__c</fullName>
    <label>Old status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>